Se agregan algunas etiquetas meta

--- a/about.css
+++ b/about.css
@@ -16,10 +16,9 @@ body {
 }
 
 
-.imagesan {
-    width: 18px;
-    height: 18px;
-    padding: 50px;
+.avocado {
+    margin: 35px;
+    text-decoration: none;
 }
 
 .greeting {
